--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <title>Introduction to React: Assessment</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="node_modules/mocha/mocha.css" />
+    <!-- <link rel="stylesheet" href="node_modules/mocha/mocha.css" /> -->
   </head>
   <body>
+    <!-- <h1>Redux Create Store Lab</h1> -->
     <div id="container"></div>
     <script src="src/index.js"></script>
   </body>
